@@ -1,5 +1,10 @@
 2008-01-16  Jim Meyering  <meyering@redhat.com>
 
+	* sed/execute.c (open_next_file, get_backup_file_name): Avoid
+	warnings from gcc.
+
+2008-01-16  Jim Meyering  <meyering@redhat.com>
+
 	* sed/compile.c (snarf_char_class): Reverse order of conjuncts
 	so that "delim" is not used uninitialized.
 
